[tool.poetry]
name = "grance"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphql-core = "^3.2.3"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
graphene = "^3.3"
pytest = "^7.4.3"
pytest-icdiff = "^0.8"
fastapi = "^0.104.1"
httpx = "^0.25.1"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
